# gw2combat

./: .clang-format  .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  LICENSE.txt  README.md  analyze_audit.py  clean.sh  compile.sh  generate_copy_registry_utils.py  makefile  requirements.txt  setup-dependencies.sh  setup-project.sh  setup.sh  vcpkg-packages.txt
.github/workflows/: c-cpp.yml  master-build.yml
resources/: build-cfb.json  build-cvirt.json  build-cwb-pt-pp-skill-ticks.json  build-cwb-pt-pp.json  build-cwb-pt-sp.json  build-cwb-sw-tor-sc-tor.json  build-dh-bgh.json  build-dh-hl.json  build-dh-virtues.json  build-dh.json  build-golem-fractal-relic.json  build-golem.json  build-gs-slb.json  build-lb-axe-axe-slb.json  build-lb-slb.json  build-lb-sw-axe-slb.json  build-pengi.json  build-qfb.json  build-slb.json  dh-bgh-rotation-may2.csv  encounter-server.json  encounter.json  rotation-cfb-synced.csv  rotation-cfb.csv  rotation-cvirt.csv  rotation-cwb-pt-pp.csv  rotation-cwb-pt-sp.csv  rotation-cwb-sw-tor-sc-tor.csv  rotation-dh-bgh-may2.csv  rotation-dh-bgh.csv  rotation-dh-hl.csv  rotation-dh-virtues.csv  rotation-dh.csv  rotation-dh.json  rotation-gs-slb.csv  rotation-lb-slb.csv  rotation-lb-sw-axe-slb.csv  rotation-pengi.csv  rotation-qfb.csv  rotation-slb.csv  (+1 more)
resources/recipes/: mantra-of-flame.json  recipe-template.json
src/: combat_loop.cpp  combat_loop.hpp  common.hpp  main.cpp  main_http.cpp  mru_cache.hpp  search_rotation.cpp  server.cpp  server.hpp  server_http.cpp  server_http.hpp  server_tcp.cpp  server_tcp.hpp
src/actor/: attributes.hpp  base_class.hpp  bundle.hpp  counter.hpp  effect.hpp  profession.hpp  rotation.hpp  skill.hpp  stacking.hpp  unique_effect.hpp  weapon.hpp
src/audit/: events.hpp  old_events.hpp  report.hpp  tick_event.hpp
src/component/actor/: actor_skills.hpp  alacrity.hpp  animation.hpp  attribute_conversions_component.hpp  attribute_modifiers_component.hpp  base_class_component.hpp  begun_casting_skills.hpp  casting_skill.hpp  casting_skills.hpp  combat_stats.hpp  counters_component.hpp  effective_attributes.hpp  effects_component.hpp  finished_animation.hpp  finished_casting_skill.hpp  finished_casting_skills.hpp  is_actor.hpp  is_cooldown_modifier.hpp  profession_component.hpp  relative_attributes.hpp  rotation_component.hpp  skill_triggers_component.hpp  skills_actions_component.hpp  skills_component.hpp  skills_ticks_tracker_component.hpp  static_attributes.hpp  strike_counter.hpp  unchained_skill_triggers_component.hpp  unique_effects_component.hpp
src/component/attributes/: is_attribute_conversion.hpp  is_attribute_modifier.hpp
src/component/audit/: audit_component.hpp
src/component/counter/: is_counter.hpp  is_counter_modifier.hpp
src/component/damage/: buffered_condition_damage.hpp  effects_pipeline.hpp  incoming_damage.hpp  strikes_pipeline.hpp
src/component/effect/: is_effect.hpp  is_effect_removal.hpp  is_skill_trigger.hpp  is_unique_effect.hpp  source_actor.hpp  source_skill.hpp
src/component/encounter/: encounter_configuration_component.hpp
src/component/equipment/: bundle.hpp  weapons.hpp
src/component/hierarchy/: owner_component.hpp
src/component/lifecycle/: destroy_entity.hpp
src/component/singleton/: entity_was_destroyed.hpp
src/component/skill/: ammo.hpp  configuration_component.hpp  is_conditional_skill_group.hpp  is_skill.hpp  skill_configuration_component.hpp  skill_trigger_lock.hpp
src/component/temporal/: animation_component.hpp  cooldown_component.hpp  duration_component.hpp  has_alacrity.hpp  has_quickness.hpp  recharge_component.hpp
src/configuration/: attribute_conversion.hpp  attribute_modifier.hpp  audit.hpp  build.hpp  build.schema.json  condition.hpp  cooldown_modifier.hpp  counter_configuration.hpp  counter_modifier.hpp  effect_application.hpp  effect_removal.hpp  encounter-local.hpp  encounter-server.hpp  encounter.hpp  encounter.schema.json  rotation.hpp  skill.hpp  skill_select.hpp  skill_trigger.hpp  threshold.hpp  unique_effect.hpp  weapon.hpp
src/main/gw2combat/: build.cpp  build.hpp  build_actors.cpp  build_skills.cpp  combat_loop.cpp  combat_loop.hpp  common.hpp  effect.hpp  effects.hpp  entity.cpp  entity.hpp  game_loop.cpp  game_loop.hpp  init.hpp  iterable_priority_queue.hpp  main.cpp  rotation.cpp  rotation.hpp  skills.cpp  skills.hpp  strike.hpp  types.hpp  utilities.hpp  weapon.hpp
src/main/gw2combat/actor/: attributes.hpp  base_class.hpp  build.cpp  build.hpp  nourishment_enhancement.hpp  rotation.cpp  rotation.hpp  rune.hpp  skill.hpp  skill_database.cpp  skill_database.hpp  trait.hpp  trait_database.cpp  trait_database.hpp  unique_effect.hpp  unique_effect_database.cpp  unique_effect_database.hpp  weapon.hpp
src/main/gw2combat/component/: animation.hpp  attribute_conversions_component.hpp  attribute_modifications.hpp  attribute_modifiers_component.hpp  channeling_skill.hpp  character_input.hpp  combat_stats.hpp  condition_tick_status.hpp  cooldown.hpp  damage_modifiers_component.hpp  dynamic_attributes.hpp  (+22 more)
src/main/resources/: build-cfb.json  build-core-guard.json  build-dh.json  build-golem.json  build-technician.json  rotation-cfb.csv  rotation-dh.csv  rotation.csv  skills.json  skills_db.json  traits.json  unique_effects.json
src/system/: actor.cpp  actor.hpp  apply_strikes_and_effects.cpp  apply_strikes_and_effects.hpp  attributes.cpp  attributes.hpp  audit.cpp  audit.hpp  dispatch_strikes_and_effects.cpp  dispatch_strikes_and_effects.hpp  effects.cpp  effects.hpp  encounter.cpp  encounter.hpp  hooks.cpp  hooks.hpp  rotation.cpp  rotation.hpp  skill.cpp  skill.hpp  temporal.cpp  temporal.hpp
src/test/gw2combat/: game_loop.cpp  test_build.cpp  test_rotation.cpp  test_skills.cpp
src/test/resources/: rotation.csv
src/utils/: actor_utils.cpp  actor_utils.hpp  basic_utils.hpp  condition_utils.cpp  condition_utils.hpp  counter_utils.hpp  effect_utils.hpp  entity_utils.hpp  gear_utils.hpp  io_utils.hpp  registry_utils.cpp  registry_utils.hpp  side_effect_utils.hpp  skill_utils.cpp  skill_utils.hpp  strike_counter.hpp  weapon_utils.hpp
(+192 files in other folders)
